# l2dtoolbox

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/: deformer_import.json  name_import.json
scripts/: build-macos-dmg.sh
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: parts.json
src-tauri/src/: bestdori.rs  jsonl.rs  lib.rs  main.rs  model.rs  resource_db.rs  settings.rs  types.rs
src/components/: AppSidebar.vue  BackgroundSwatchField.vue  CommandResult.vue  JsonPartsTable.vue  PageHeader.vue  PreviewCanvas.vue  SectionCard.vue
src/lib/: bestdori.ts  manifest.test.ts  manifest.ts  preview-backgrounds.ts  preview-window.ts  tauri.ts
src/lib/runtime/: composite-live2d.ts  cubism.ts  model-inspector.ts  model-source.ts  pixi.ts  single-live2d.ts
src/pages/: ImportTablePage.vue  JsonlEditorPage.vue  JsonlGeneratorPage.vue  JsonlWorkbenchPage.vue  ModelToolsPage.vue  OnlineModelLibraryPage.vue  PartEditorPage.vue  PresetBuilderPage.vue  PreviewStudioPage.vue  PreviewWindowPage.vue  ResourceDatabasePage.vue  WmdlConverterPage.vue
src/types/: app.ts
