[package]
name = "l2dtoolbox"
version = "0.1.1"
description = "Live2D Toolbox"
authors = ["Dongshan Randeng"]
edition = "2021"

[lib]
name = "l2dtoolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
walkdir = "2"
